[package]
name = "checklist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
config = "0.13.3"
cron = "0.12.0"
eframe = "0.20.1"
egui = "0.20.1"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.91"
